@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-11-20 ede
+  * made toolbars nonfloatable, which never was supported properly anyway
+
 2016-11-15 mmichaud <m.michael.michaud@orange.fr>
   * Fix #353 Dialogs do not use preferred size on dual screen
 
